compatibility with older GHCs

--- a/ltc.cabal
+++ b/ltc.cabal
@@ -35,6 +35,7 @@ Library
                         data-default,
                         directory,
                         filepath,
+                        ghc-prim,
                         hslogger,
                         network,
                         pipes >= 3.1,
@@ -103,6 +104,7 @@ Executable dBay
                         cereal,
                         containers,
                         data-default,
+                        ghc-prim,
                         ltc,
                         network,
                         sexp,
@@ -187,6 +189,7 @@ Test-suite customtype
                         cereal,
                         data-default,
                         directory,
+                        ghc-prim,
                         HUnit,
                         ltc,
                         network,
