pennyBidder for dBay

--- a/ltc.cabal
+++ b/ltc.cabal
@@ -107,6 +107,7 @@ Executable dBay
                         ghc-prim,
                         ltc,
                         network,
+                        random,
                         sexp,
                         stm
 
