the neighbour is a hostname, not a port

--- a/ltc.cabal
+++ b/ltc.cabal
@@ -107,6 +107,7 @@ Executable dBay
                         containers,
                         data-default,
                         ghc-prim,
+                        hslogger,
                         ltc,
                         network,
                         random,
